--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,15 @@
 services:
   - type: web
-    name: data-analysis-arabic
+    name: data-analysis-pro
     env: python
+    region: frankfurt  # أو singapore
+    plan: free
+    branch: main
     buildCommand: pip install -r requirements.txt
     startCommand: streamlit run app.py --server.port $PORT --server.address 0.0.0.0
     envVars:
+      - key: PORT
+        value: 10000
       - key: PYTHON_VERSION
         value: 3.9.0
-    plan: free
+    autoDeploy: true
